--- a/cardiac.html
+++ b/cardiac.html
@@ -77,7 +77,7 @@
 
             <!-- Glimedus -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 cardiac-vividus-card">
+                <div class="card p-3 cardiac-vividus-card text-center">
                     <h2 class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 23.png" alt="Glimedus - M1 / M2" class="product-logo" />
                     </h2>
@@ -103,7 +103,7 @@
 
             <!-- Rosunorm -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 cardiac-vividus-card">
+                <div class="card p-3 cardiac-vividus-card text-center">
                     <h2 class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 50.png" alt="Rosunorm - 10" class="product-logo" />
                     </h2>
@@ -133,7 +133,7 @@
 
             <!-- Sitaphil / Dapadus -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 cardiac-vividus-card">
+                <div class="card p-3 cardiac-vividus-card text-center">
                     <h2 class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 32.png" alt="Sitaphil M 50/500" class="product-logo" />
                     </h2>
@@ -158,7 +158,7 @@
 
             <!-- Tenonorm -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 cardiac-vividus-card">
+                <div class="card p-3 cardiac-vividus-card text-center">
                     <h2 class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 27.png" alt="Tenenorm - 20" class="product-logo" />
                     </h2>
@@ -173,7 +173,7 @@
 
             <!-- M-COBAL CD -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 cardiac-vividus-card">
+                <div class="card p-3 cardiac-vividus-card text-center">
                     <h2 class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 31.png" alt="M-COBAL CD" class="product-logo" />
                     </h2>
@@ -184,7 +184,7 @@
 
             <!-- Vigor-OD -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 cardiac-vividus-card">
+                <div class="card p-3 cardiac-vividus-card text-center">
                     <h2 class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 56.png" alt="Vigor-OD" class="product-logo" />
                     </h2>
@@ -195,7 +195,7 @@
 
             <!-- Pregadus / Gaba dus -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 cardiac-vividus-card">
+                <div class="card p-3 cardiac-vividus-card text-center">
                     <h2 class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 29.png" alt="Pregadus - M75" class="product-logo" />
                     </h2>
@@ -210,7 +210,7 @@
 
             <!-- Cinorm -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 cardiac-vividus-card">
+                <div class="card p-3 cardiac-vividus-card text-center">
                     <h2 class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 53.png" alt="Cinorm - 5 / 10" class="product-logo" />
                     </h2>
@@ -230,7 +230,7 @@
 
             <!-- Telmidus -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 cardiac-vividus-card">
+                <div class="card p-3 cardiac-vividus-card text-center">
                     <h2 class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 45.png" alt="Telmidus - 40" class="product-logo" />
                     </h2>
@@ -250,7 +250,7 @@
 
             <!-- Vivimet XL -->
             <div class="col-md-4">
-                <div class="card p-3 cardiac-vividus-card">
+                <div class="card p-3 cardiac-vividus-card text-center">
                     <h2 class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 42.png" alt="Vivimet XL - 25/50" class="product-logo" />
                     </h2>
@@ -260,7 +260,7 @@
 
             <!-- AB Norm-100 -->
             <div class="col-md-4">
-                <div class="card p-3 cardiac-vividus-card">
+                <div class="card p-3 cardiac-vividus-card text-center">
                     <h2 class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 37.png" alt="AB Norm - 100" class="product-logo" />
                     </h2>
@@ -270,11 +270,11 @@
 
             <!-- Rabedus-DSR -->
             <div class="col-md-4 ">
-                <div class="card p-3 cardiac-vividus-card">
+                <div class="card p-3 cardiac-vividus-card text-center">
                     <h2 class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 41.png" alt="Rabedus - DSR" class="product-logo" />
                     </h2>
-                    <p>Rabeprazole 20mg + Domperidone 30mg Capsules</p>
+                    <p >Rabeprazole 20mg + Domperidone 30mg Capsules</p>
                 </div>
             </div>
 
