commit final one

--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 
 
     <section class="contactus-page-section">
-        <div class="container-fluid px-5">
+        <div class="container-fluid p-0">
             <div class="row g-4 align-items-center">
                 <div class="col-lg-8">
                     <div class="contactus-page-card">
@@ -102,7 +102,7 @@
                             <div class="mb-3">
                                 <textarea class="form-control" rows="3" placeholder="Your Message"></textarea>
                             </div>
-                            <button type="submit" class="contactus-page-btn">Submit Now</button>
+                            <button type="submit" class="contactus-page-btn mb-3">Submit Now</button>
                         </form>
                     </div>
                 </div>
@@ -129,8 +129,8 @@
     </section>
 
     <!-- footer section code start  -->
-    <footer class="vividus-footer-main py-4">
-        <div class="container-fluid px-5">
+    <footer class="vividus-footer-main ">
+        <div class="container-fluid p-0">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
                     <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
