--- a/ent.html
+++ b/ent.html
@@ -81,12 +81,12 @@
                     <h2 class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 41.png" alt="Rabedus - DSR" class="product-logo" />
                     </h2>
-                    <p>Rabeprazole Sodium 20mg +<br> Domperidone SA 30mg Capsules</p>
+                    <p>Rabeprazole Sodium 20mg + Domperidone SA 30mg Capsules</p>
 
                     <h2 class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 40.png" alt="Esogast DSR" class="product-logo" />
                     </h2>
-                    <p>Esomeprazole 40 mg +<br> Domperidone SR 30 mg Capsules</p>
+                    <p>Esomeprazole 40 mg + Domperidone SR 30 mg Capsules</p>
                 </div>
             </div>
 
@@ -108,12 +108,12 @@
                     <h2 class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 39.png" alt="Cefponorm CV 200/125" class="product-logo" />
                     </h2>
-                    <p>Cefpodoxime 200 mg + Clavulanate Acid<br> 125 mg Tablets</p>
+                    <p>Cefpodoxime 200 mg + Clavulanate Acid 125 mg Tablets</p>
 
                     <h2 class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 38.png" alt="LEDUS M" class="product-logo" />
                     </h2>
-                    <p>Levocetrizine Hydrochloride 5mg +<br> Montelukast 10 mg Tablets</p>
+                    <p>Levocetrizine Hydrochloride 5mg + Montelukast 10 mg Tablets</p>
                 </div>
             </div>
 
@@ -123,12 +123,12 @@
                     <h2 class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 29.png" alt="Pregadus - M75" class="product-logo" />
                     </h2>
-                    <p>Pregabalin 75mg +<br> Methylcobalamin 750mcg Capsules</p>
+                    <p>Pregabalin 75mg + Methylcobalamin 750mcg Capsules</p>
 
                     <h2 class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 30.png" alt="Gabadus - NT" class="product-logo" />
                     </h2>
-                    <p>Gabapentin IP 400 mg + Nortriptyline<br> Hydrochloride IP (Eq. to
+                    <p>Gabapentin IP 400 mg + Nortriptyline Hydrochloride IP (Eq. to
                         Nortriptyline) 10 mg Tablets</p>
                 </div>
             </div>
