--- a/orthopedic.html
+++ b/orthopedic.html
@@ -85,11 +85,11 @@
                     <div class="vividu-orthopedic-text">Trypsin Chymotrypsin 100000 AU</div>
 
                     <img src="img/VIVIDUS Logos/Frame 12.png" alt="TRYPSEE PLUS" class="product-logo mt-3 mb-2" />
-                    <div class="vividu-orthopedic-text">Trypsin Chymotrypsin 150000 AU,<br>Aceclofenac 100mg,
+                    <div class="vividu-orthopedic-text">Trypsin Chymotrypsin 150000 AU, Aceclofenac 100mg,
                         Paracetamol 325mg</div>
 
                     <img src="img/VIVIDUS Logos/Frame 11.png" alt="TRYPSEE BR" class="product-logo mt-3 mb-2" />
-                    <div class="vividu-orthopedic-text">Trypsin BP 48mg, Bromelain BP 90mg,<br>Rutoside Trihydrate BP
+                    <div class="vividu-orthopedic-text">Trypsin BP 48mg, Bromelain BP 90mg, Rutoside Trihydrate BP
                         100mg</div>
                 </div>
             </div>
@@ -100,13 +100,13 @@
                     <div class="vividu-orthopedic-card vividu-orthopedic-orange text-center">
                         <img src="img/VIVIDUS Logos/Frame 10.png" alt="JOINT LITE" class="product-logo mb-2" />
                         <div class="vividu-orthopedic-text">
-                            Boswellia Serrata Extract (AKBA 30%) 50mg.<br>
-                            Collagen Peptide Type II 20mg, Rose Hip<br>
-                            Extract 75mg, Glucosamine HCI 750mg,<br>
-                            Ginger Extract 20% 40mg, Iron 5mg,<br>
-                            Copper 0.5mg, Manganese 2mg,<br>
-                            Selenium 20mcg, Zinc 5mg, Folic Acid 64.5mcg,<br>
-                            Vitamin B12 1.1mcg, Vitamin C 20mg,<br>
+                            Boswellia Serrata Extract (AKBA 30%) 50mg.
+                            Collagen Peptide Type II 20mg, Rose Hip
+                            Extract 75mg, Glucosamine HCI 750mg,
+                            Ginger Extract 20% 40mg, Iron 5mg,
+                            Copper 0.5mg, Manganese 2mg,
+                            Selenium 20mcg, Zinc 5mg, Folic Acid 64.5mcg,
+                            Vitamin B12 1.1mcg, Vitamin C 20mg,
                             Vitamin D3 7.5mcg
                         </div>
                     </div>
@@ -117,8 +117,8 @@
                     <div class="vividu-orthopedic-card vividu-orthopedic-green text-center mt-0">
                         <img src="img/VIVIDUS Logos/Frame 9.png" alt="FRACZERO" class="product-logo mb-2" />
                         <div class="vividu-orthopedic-text">
-                            Cissus Quadrangularis Linn. Extract 250mg,<br>
-                            Calcium Citrate Malate 600mg,<br>
+                            Cissus Quadrangularis Linn. Extract 250mg,
+                            Calcium Citrate Malate 600mg,
                             Vitamin D3 100 IU, Vitamin K2-7 25mcg
                         </div>
                     </div>
@@ -131,14 +131,14 @@
 
                     <img src="img/VIVIDUS Logos/Frame 14.png" alt="TENDOFORCE" class="product-logo mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Collagen Peptide Type-I 40mg, Sodium<br>
-                        Hyaluronate 30mg, Chondroitin Sulfate 200mg,<br>
+                        Collagen Peptide Type-I 40mg, Sodium
+                        Hyaluronate 30mg, Chondroitin Sulfate 200mg,
                         Ascorbic Acid (Vitamin C) 12.5mg
                     </div>
 
                     <img src="img/VIVIDUS Logos/Frame 7.png" alt="Calcidus" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Coral Calcium (from Coral Grains) 500mg,<br>
+                        Coral Calcium (from Coral Grains) 500mg,
                         Vitamin D3 500 IU
                     </div>
 
