--- a/urology.html
+++ b/urology.html
@@ -84,11 +84,11 @@
                     <div class="vividu-orthopedic-text">Trypsin Chymotrypsin 100000 AU</div>
 
                     <img src="img/VIVIDUS Logos/Frame 12.png" alt="TRYPSEE PLUS" class="product-logo mt-3 mb-2" />
-                    <div class="vividu-orthopedic-text">Trypsin Chymotrypsin 150000 AU,<br>Aceclofenac 100mg,
+                    <div class="vividu-orthopedic-text">Trypsin Chymotrypsin 150000 AU, Aceclofenac 100mg,
                         Paracetamol 325mg</div>
 
                     <img src="img/VIVIDUS Logos/Frame 11.png" alt="TRYPSEE BR" class="product-logo mt-3 mb-2" />
-                    <div class="vividu-orthopedic-text">Trypsin BP 48mg, Bromelain BP 90mg,<br>Rutoside Trihydrate BP
+                    <div class="vividu-orthopedic-text">Trypsin BP 48mg, Bromelain BP 90mg, Rutoside Trihydrate BP
                         100mg</div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                 <div class="vividu-orthopedic-card vividu-orthopedic-orange text-center">
                     <img src="img/VIVIDUS Logos/Frame 15.png" alt="URIPACE-D" class="product-logo mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Tamsulosin Hydrochloride IP 0.4mg,<br>
+                        Tamsulosin Hydrochloride IP 0.4mg, 
                         Dutasteride IP 0.5mg
                     </div>
 
@@ -109,7 +109,7 @@
 
                     <img src="img/VIVIDUS Logos/Frame 17.png" alt="ASSURE-M" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Co-enzyme Q10, Astaxanthin, Lycopene,<br>
+                        Co-enzyme Q10, Astaxanthin, Lycopene, 
                         L-Arginine, L-Carnitine, Zinc Tablets
                     </div>
 
@@ -125,8 +125,8 @@
                 <div class="vividu-orthopedic-card vividu-orthopedic-blue text-center">
                     <img src="img/VIVIDUS Logos/Frame 19 (1).png" alt="VIVIFer" class="product-logo mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Ferrous Ascorbate 100mg, Cyanocobalamin 75mcg,<br>
-                        Folic Acid 1.5mg, Pyridoxine Hydrochloride 1.5mg,<br>
+                        Ferrous Ascorbate 100mg, Cyanocobalamin 75mcg, 
+                        Folic Acid 1.5mg, Pyridoxine Hydrochloride 1.5mg, 
                         Cholecalciferol 1000 IU
                     </div>
 
@@ -140,7 +140,7 @@
 
                     <img src="img/VIVIDUS Logos/Frame 7.png" alt="Calcidus" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Coral Calcium (from Coral Grains) 500mg,<br>
+                        Coral Calcium (from Coral Grains) 500mg, 
                         Vitamin D3 500 IU
                     </div>
                 </div>
