--- a/cardiac.html
+++ b/cardiac.html
@@ -78,25 +78,25 @@
             <!-- Glimedus -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card text-center">
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 23.png" alt="Glimedus - M1 / M2" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Glimepiride 1mg / 2mg + Metformin 500mg</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 24.png" alt="Glimedus - M1 / M2 Forte"
                             class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Glimepiride 1mg / 2mg + Metformin 1000mg</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 25.png" alt="Glimedus - MV1 / MV2" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Glimepiride 1mg / 2mg + Voglibose 0.2mg + Metformin 500mg</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 26.png" alt="Glimedus - MP1 / MP2" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Glimepiride 1mg / 2mg + Pioglitazone 15mg</p>
                 </div>
             </div>
@@ -104,29 +104,29 @@
             <!-- Rosunorm -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card text-center">
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 50.png" alt="Rosunorm - 10" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Rosuvastation 10mg Tablets</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 49.png" alt="Rosunorm - CV 10" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Rosuvastatin 10mg + Clopidogrel 75mg capsules</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 48.png" alt="Rosunorm - Gold 10" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Rosuvastatin 10mg + Aspirin 75mg + Clopidogrel 75mg capsules</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 47.png" alt="Rosunorm - ASP 10/75" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Rosuvastatin 10mg + Aspirin 75mg capsules</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 46.png" alt="Rosunorm - F 10/160" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Rosuvastatin 10mg + Fenofibrate 160mg capsules</p>
                 </div>
             </div>
@@ -134,24 +134,24 @@
             <!-- Sitaphil / Dapadus -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card text-center">
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 32.png" alt="Sitaphil M 50/500" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Sitagliptin 50mg + Metformin 500mg tablets</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 57.png" alt="Sitaphil DM 100/10/500" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Sitagliptin 100mg + Dapagliflozin 10mg + Metformin 500mg tablets</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 22.png" alt="Dapadus 10" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Dapagliflozin 10mg tablets</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 21.png" alt="Dapadus M 10/500" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Dapagliflozin 10mg + Metformin 500mg tablets</p>
                 </div>
             </div>
@@ -159,14 +159,14 @@
             <!-- Tenonorm -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card text-center">
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 27.png" alt="Tenenorm - 20" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Teneligliptin 20mg tablets</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 28.png" alt="Tenenorm - M500" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Teneligliptin 20mg + Metformin 500mg tablets</p>
                 </div>
             </div>
@@ -174,9 +174,9 @@
             <!-- M-COBAL CD -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card text-center">
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 31.png" alt="M-COBAL CD" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Mecobalamin 1500mcg + Alpha Lipoic Acid 100mg+ Myo-Inositol 100mg + Benfotiamine 150mg Folic Acid
                         1.5mg + Chromium 200mcg + Selenium 55mcg Capsules</p>
                 </div>
@@ -185,9 +185,9 @@
             <!-- Vigor-OD -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card text-center">
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 56.png" alt="Vigor-OD" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Vitamin C 80mg Niacinamide 23mg Vitamin 81 2.3mg +Vitamin B2 3.2 mg Vitamin B6 3mg + Calcium
                         Pantothenate 5mg Folic Acid 176.47mcg + Vitamin B12</p>
                 </div>
@@ -196,14 +196,14 @@
             <!-- Pregadus / Gaba dus -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card text-center">
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 29.png" alt="Pregadus - M75" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Pregabalin 75mg + Methylcobalamin 750mcg capsules</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 30.png" alt="Gabadus - NT" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Gabapentin 400mg + Nortriptyline capsules</p>
                 </div>
             </div>
@@ -211,19 +211,19 @@
             <!-- Cinorm -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card text-center">
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 53.png" alt="Cinorm - 5 / 10" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Cilnidipine 5mg / 10mg tablets</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 52.png" alt="Cinorm - T" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Cilnidipine 10mg + Telmisartan 40mg tablets</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 51.png" alt="Cinorm - M 5 / 10" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Cilnidipine 10mg + Metoprolol 50mg tablets</p>
                 </div>
             </div>
@@ -231,19 +231,19 @@
             <!-- Telmidus -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card text-center">
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 45.png" alt="Telmidus - 40" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Telmisartan 40mg tablets</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 44.png" alt="Telmidus - H" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Telmisartan 40mg + HCTZ 12.5mg tablets</p>
 
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 43.png" alt="Telmidus - M50" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Telmisartan 40mg + Metoprolol 50mg tablets</p>
                 </div>
             </div>
@@ -251,9 +251,9 @@
             <!-- Vivimet XL -->
             <div class="col-md-4">
                 <div class="card p-3 cardiac-vividus-card text-center">
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 42.png" alt="Vivimet XL - 25/50" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Metoprolol Succinate (ER) 25/50mg Tablets IP</p>
                 </div>
             </div>
@@ -261,9 +261,9 @@
             <!-- AB Norm-100 -->
             <div class="col-md-4">
                 <div class="card p-3 cardiac-vividus-card text-center">
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 37.png" alt="AB Norm - 100" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Acebrophylline 100mg Capsules</p>
                 </div>
             </div>
@@ -271,9 +271,9 @@
             <!-- Rabedus-DSR -->
             <div class="col-md-4 ">
                 <div class="card p-3 cardiac-vividus-card text-center">
-                    <h2 class="cardiac-vividus-title">
+                    <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 41.png" alt="Rabedus - DSR" class="product-logo" />
-                    </h2>
+                    </div>
                     <p >Rabeprazole 20mg + Domperidone 30mg Capsules</p>
                 </div>
             </div>
