--- a/ent.html
+++ b/ent.html
@@ -78,14 +78,14 @@
             <!-- Rabedus & Esogast -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 ent-vividus-card text-center">
-                    <h2 class="ent-vividus-title">
+                    <div class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 41.png" alt="Rabedus - DSR" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Rabeprazole Sodium 20mg + Domperidone SA 30mg Capsules</p>
 
-                    <h2 class="ent-vividus-title">
+                    <div class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 40.png" alt="Esogast DSR" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Esomeprazole 40 mg + Domperidone SR 30 mg Capsules</p>
                 </div>
             </div>
@@ -93,9 +93,9 @@
             <!-- Vigor OD -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 ent-vividus-card text-center">
-                    <h2 class="ent-vividus-title">
+                    <div class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 56.png" alt="Vigor-OD" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Vitamin C 80mg Niacinamide 23mg + Vitamin B1 2.3mg Vitamin B2 3.2 mg +
                         Vitamin B6 3mg + Calcium Pantothenate 5mg Folic Acid 176.47mcg+ Vitamin B12 2.5mcg + Vitamin
                         A(As Palmitate) 15mcg + Sodium Carbonate 5mcg+ Chloride (As Manganse Chloride) 5mg </p>
@@ -105,14 +105,14 @@
             <!-- Cefponorm CV & Ledus M -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 ent-vividus-card text-center">
-                    <h2 class="ent-vividus-title">
+                    <div class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 39.png" alt="Cefponorm CV 200/125" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Cefpodoxime 200 mg + Clavulanate Acid 125 mg Tablets</p>
 
-                    <h2 class="ent-vividus-title">
+                    <div class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 38.png" alt="LEDUS M" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Levocetrizine Hydrochloride 5mg + Montelukast 10 mg Tablets</p>
                 </div>
             </div>
@@ -120,14 +120,14 @@
             <!-- Pregadus M75 & Gabadus NT -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 ent-vividus-card text-center">
-                    <h2 class="ent-vividus-title">
+                    <div class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 29.png" alt="Pregadus - M75" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Pregabalin 75mg + Methylcobalamin 750mcg Capsules</p>
 
-                    <h2 class="ent-vividus-title">
+                    <div class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 30.png" alt="Gabadus - NT" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Gabapentin IP 400 mg + Nortriptyline Hydrochloride IP (Eq. to
                         Nortriptyline) 10 mg Tablets</p>
                 </div>
@@ -136,9 +136,9 @@
             <!-- M-Cobal CD -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 ent-vividus-card text-center">
-                    <h2 class="ent-vividus-title">
+                    <div class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 31.png" alt="M-COBAL CD" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Mecobalamin 1500mcg + Alpha Lipoic Acid 100mg + Myo-Inositol 100mg +
                         Benfotiamine 150mg + Folic Acid 1.5mg + Chromium 200mcg + Selenium 55mcg Capsules</p>
                 </div>
@@ -147,14 +147,14 @@
             <!-- AB Norm 100 & D3 Max 60k -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 ent-vividus-card text-center">
-                    <h2 class="ent-vividus-title">
+                    <div class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 37.png" alt="AB NORM - 100" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Acebrophylline 100 mg Capsules</p>
 
-                    <h2 class="ent-vividus-title">
+                    <div class="ent-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 36.png" alt="D3 Max 60k" class="product-logo" />
-                    </h2>
+                    </div>
                     <p>Cholecalciferol Mouth Dissolving Tablets 60000IU</p>
                 </div>
             </div>
