--- a/urology.html
+++ b/urology.html
@@ -20,7 +20,7 @@
 <body>
 
     <header class="vividus-header-main navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid px-0">
+        <div class="container-fluid p-0">
             <a class="navbar-brand" href="#">
                 <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
             </a>
