--- a/about.html
+++ b/about.html
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-
     <header class="vividus-header-main navbar navbar-expand-lg navbar-light">
         <div class="container-fluid px-0">
             <a class="navbar-brand" href="#">
@@ -318,7 +317,7 @@
                 </div>
 
                 <!-- FAQ Item 3 -->
-                <div class="card">
+                <!-- <div class="card">
                     <div class="vividus-faqs-header" data-toggle="collapse" data-target="#faq3">
                         <div><strong>03</strong> How do I upload my prescription?</div>
                         <div class="faq-icon"><i class="fas fa-chevron-down"></i></div>
@@ -329,12 +328,12 @@
                             and selecting the “Upload Prescription” option.
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- FAQ Item 4 -->
                 <div class="card">
                     <div class="vividus-faqs-header" data-toggle="collapse" data-target="#faq4">
-                        <div><strong>04</strong> Are generic drugs safe to use?</div>
+                        <div><strong>03</strong> Are generic drugs safe to use?</div>
                         <div class="faq-icon"><i class="fas fa-chevron-down"></i></div>
                     </div>
                     <div id="faq4" class="collapse" data-parent="#faqAccordion">
