--- a/cardiac.html
+++ b/cardiac.html
@@ -249,7 +249,7 @@
             </div>
 
             <!-- Vivimet XL -->
-            <div class="col-md-4">
+            <div class="col-md-4 mt-3">
                 <div class="card p-3 cardiac-vividus-card text-center">
                     <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 42.png" alt="Vivimet XL - 25/50" class="product-logo" />
@@ -259,7 +259,7 @@
             </div>
 
             <!-- AB Norm-100 -->
-            <div class="col-md-4">
+            <div class="col-md-4 mt-3">
                 <div class="card p-3 cardiac-vividus-card text-center">
                     <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 37.png" alt="AB Norm - 100" class="product-logo" />
@@ -269,7 +269,7 @@
             </div>
 
             <!-- Rabedus-DSR -->
-            <div class="col-md-4 ">
+            <div class="col-md-4 mt-3">
                 <div class="card p-3 cardiac-vividus-card text-center">
                     <div class="cardiac-vividus-title">
                         <img src="img/VIVIDUS Logos/Frame 41.png" alt="Rabedus - DSR" class="product-logo" />
