--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
             <div class="row g-4 align-items-center">
                 <div class="col-lg-8">
                     <div class="contactus-page-card">
-                        <small class="text-black">Get In Touch</small>
+                        <small class="text-black text-center">Get In Touch</small>
                         <h2 class="contactus-page-title mt-2">Our Pharmacy & Healthcare Team is Here to Help</h2>
                         <p class="contactus-page-subtitle">
                             Whether you need prescription refills, medical advice, or personalized care, our expert team
